[project]
name = "cryonet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
    {name = "synodriver", email = "diguohuangjiajinweijun@gmail.com"}
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel", "Cython>3.0.0"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
dev = [
    "Cython>=3.0.11",
]
